# tpm-luks

./: .gitignore  AUTHORS  BUILD  Makefile.am  README.md  configure.in
debian/: README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  tpm-luks.cron.d.ex  tpm-luks.default.ex  tpm-luks.doc-base.EX  tpm-luks.install  watch.ex
pcrsum/: Makefile.am  pcrdecode.c  pcrsum.c
pcrsum/include/: PeImage.h  UefiTcgPlatform.h  efistruct.h
swtpm-utils/: Makefile.am  pcr-extend.c
tpm-luks-scripts/etc/: tpm-luks.conf
tpm-luks-scripts/etc/initramfs-tools/hooks/: luks-tpm
tpm-luks-scripts/etc/initramfs-tools/scripts/local-top/: cryptpm
tpm-luks-scripts/etc/initramfs/post-update.d/: tpm-luks-update
tpm-luks-scripts/usr/sbin/: tpm-luks  tpm-luks-findbiosbootcode  tpm-luks-findbiosbootdata  tpm-luks-findbiosgrubstage15  tpm-luks-findbiosgrubstage2  tpm-luks-findefibootgpt  tpm-luks-findefibootmgr  tpm-luks-findefishimhash  tpm-luks-gen-tgrub-pcr-values  tpm-luks-init  tpm-luks-update
